package cn.cdut.a6pan.ui.main;

import androidx.paging.DataSource;

public class FilePageDataSourceFactory extends DataSource.Factory {
}
