package cn.cdut.a6pan.ui.main;

public class OfflinePageDataSourceFactory {
}
