@startuml

title __MAIN's Class Diagram__\n

  namespace cn.cdut.a6pan {
    namespace ui.main {
      class cn.cdut.a6pan.ui.main.DownloadContentObserver {
          + DownloadContentObserver()
          + onChange()
          + updateView()
      }
    }
  }
  

  namespace cn.cdut.a6pan {
    namespace ui.main {
      class cn.cdut.a6pan.ui.main.FilePageDataSourceFactory {
          - pageKeyedDataSource : PageKeyedDataSource<Integer, File>
          + FilePageDataSourceFactory()
          + create()
      }
    }
  }
  

  namespace cn.cdut.a6pan {
    namespace ui.main {
      class cn.cdut.a6pan.ui.main.OfflinePageDataSourceFactory {
          - pageKeyedDataSource : PageKeyedDataSource<Integer, OfflineTask>
          + OfflinePageDataSourceFactory()
          + create()
      }
    }
  }
  

  cn.cdut.a6pan.ui.main.DownloadContentObserver -up-|> android.database.ContentObserver
  cn.cdut.a6pan.ui.main.FilePageDataSourceFactory -up-|> androidx.paging.DataSource.Factory
  cn.cdut.a6pan.ui.main.OfflinePageDataSourceFactory -up-|> androidx.paging.DataSource.Factory


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
